--- a/frontend/src/pages/DashboardPage.css
+++ b/frontend/src/pages/DashboardPage.css
@@ -8,6 +8,6 @@
 
 @media (max-width: 667px){
 .collections-container {
-  padding-bottom: 100px;
+  padding-bottom: 120px;
 }
 }
